track scrollbar fix

--- a/dev/css/multiple-browsers.scss
+++ b/dev/css/multiple-browsers.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 
   > div {
     width: 100%;
